<resources>
    <string name="app_name">Dementia Aid</string>
    <string name="title_activity_maps">Virtual Fence</string>
    <string name="title_activity_tap_main">TapMainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_send">Set Fence</string>
    <string name="Done_Button">Done</string>
    <string name="title_activity_tab1_show_map">Tab1ShowMapActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_message">Username</string>
    <string name="password_message">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_login_result">LoginResult</string>
    <string name="sharedPreferences">pacman372.dementiaaid.userDetails</string>
    <string name="confirm_password">please confirm your password</string>
    <string name="new_username_msg">new username</string>
    <string name="new_password">new password</string>
    <string name="password_mismatch_error"> password dont match</string>
    <string name="empty_error">Can\'t be empty</string>
    <string name="create_failed">create account failed</string>
    <string name="NetworkError">no net connection</string>
</resources>
