<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="pacman372.dementiaaid.CreateAccount.CreateAccount"
    android:weightSum="1">

    <EditText android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/new_username_msg" />

    <EditText android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/new_password" />
    <EditText android:id="@+id/newpassword_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/creataccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Create Account"
        android:onClick="onCreateAccountClicked"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:text="RETURN TO LOGIN"
        android:id="@+id/gobacktologin"
        android:onClick="BackToLogin"
        />

    <TextView
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/error"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />
</LinearLayout>
